--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,12 @@
             <div id="output"></div>
             <div id="feedback"></div>
         </div>
-        <input id="handle" type="text" placeholder="Handle" />
-        <input id="message" type="text"  placeholder ="Message" />
-        <button id="send">Send</button>
+        <div class="take">
+            <input id="handle" type="text" placeholder="Handle" />
+            <input id="message" type="text"  placeholder ="Message" />    
+            <button class="btn btn-send" id="send">Send</button>
+        </div>
+        
     </div>
     
 </body>
